<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtTitle">
 
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fullname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/fullname_hint"
            android:inputType="textPersonName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtDepName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/depName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editDepName"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/depName_hint"
            android:inputType="textPersonName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtDepRegNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/depRegNo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editDepRegNo"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/depRegNo_hint"
            android:inputType="textPersonName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtContect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="30dp"
            android:text="@string/contect"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editContect"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/contect_hint"
            android:inputType="phone"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="30dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_margin="5dp"
            android:layout_marginLeft="30dp"
            android:textSize="18sp" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editAdd"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/add_hint"
            android:inputType="textPostalAddress"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="0.18"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btCancel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/buttonCancel"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btClear"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/buttonClear"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btOk"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text="@string/buttonOk"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    
   </ScrollView>
</RelativeLayout>
