<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  
    <ScrollView 
        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtTitle">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtUName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editFName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/firstname_hint"
                android:inputType="textPersonName"
                tools:ignore="RtlHardcoded" >
            </EditText>

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/confirmpassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editconfirmPassword"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/confirmpassword_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="30dp"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="0.06"
                android:checkedButton="@+id/radioGeneral"
                android:orientation="horizontal"
                tools:ignore="InefficientWeight" >

                <RadioButton
                    android:id="@+id/radioGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/general" />

                <RadioButton
                    android:id="@+id/radioSpecial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0.68"
                    android:text="@string/special" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="302dp"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.13"
                    android:text="@string/buttonBack" />

                <Button
                    android:id="@+id/btNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0.12"
                    android:text="@string/buttonNext" />

                <Button
                    android:id="@+id/btOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="0.15"
                    android:text="@string/buttonOk" />
            </LinearLayout>
        </LinearLayout>
              
    </ScrollView>

</RelativeLayout>